feat: add photo to CV

--- a/index.html
+++ b/index.html
@@ -37,36 +37,39 @@
   </head>
   <body>
     <header>
-      <h1>Tsimafei Petrykevich</h1>
-      <h2>
-        <span id="wat-header">Work and Travel</span>
-      </h2>
-      <section id="about-me-contacts">
-        <article id="about-me">
-          Accomplishing young student with passion to <em>Computer Science</em>,
-          <em>Sports</em>, <em>Music</em> and <em>Fashion</em>. Willing to find
-          a summer job in USA to get working experience,
-          <strong>improve</strong> skills and <strong>learn</strong> more about
-          American Culture.
-        </article>
-        <ul id="contacts">
-          <li id="phone">+375291190488</li>
-          <li id="email">petrik3003@gmail.com</li>
-          <li id="adress">Minsk, Belarus</li>
-          <li id="inter-exchange">
-            <a href="https://www.interexchange.org/work-travel-usa/">
-              <img
-                src="Images/InterExchangeLogoTransparent.png"
-                alt="InterExchangeLogo"
-              />
-            </a>
-          </li>
-        </ul>
-        <ul id="personal-info">
-          <li>Date of Birth: 30.03.2004</li>
-          <li>Age: 19</li>
-        </ul>
-      </section>
+      <img src="Images/CV Photo.jpg" alt="My Photo" id="cv-photo" />
+      <div id="header-text">
+        <h1>Tsimafei Petrykevich</h1>
+        <h2>
+          <span id="wat-header">Work and Travel</span>
+        </h2>
+        <section id="about-me-contacts">
+          <article id="about-me">
+            Accomplishing young student with passion to
+            <em>Computer Science</em>, <em>Sports</em>, <em>Music</em> and
+            <em>Fashion</em>. Willing to find a summer job in USA to get working
+            experience, <strong>improve</strong> skills and
+            <strong>learn</strong> more about American Culture.
+          </article>
+          <ul id="contacts">
+            <li id="phone">+375291190488</li>
+            <li id="email">petrik3003@gmail.com</li>
+            <li id="adress">Minsk, Belarus</li>
+            <li id="inter-exchange">
+              <a href="https://www.interexchange.org/work-travel-usa/">
+                <img
+                  src="Images/InterExchangeLogoTransparent.png"
+                  alt="InterExchangeLogo"
+                />
+              </a>
+            </li>
+          </ul>
+          <ul id="personal-info">
+            <li>Date of Birth: 30.03.2004</li>
+            <li>Age: 19</li>
+          </ul>
+        </section>
+      </div>
     </header>
     <main>
       <section id="work-experience">
