feat: sales job change description

--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
         <section class="work" id="tti-studio">
           <figure class="header-caption">
             <h3>Retail Sales Associate</h3>
-            <figcaption>2021 &mdash; present, Sneaker-Head, Belarus</figcaption>
+            <figcaption>2021 &mdash; 2022, Sneaker-Head, Belarus</figcaption>
           </figure>
           <p>
-            As a retail sales associate in Sneaker-Head company I provide
+            As a retail sales associate in Sneaker-Head company I provided
             excellent customer experience by offering a helping hand to the
             clients and making suggestions or recommendations according to their
             preferences.
           </p>
 
           <p>
-            I also maintain local store and keep it clean, track the shelves to
-            be well-organized and structured. To improve my skills as a sales
-            associate I follow and analyze visitors' behaviour daily.
+            I also maintained local store and kept it clean, tracked the shelves
+            to be well-organized and structured. To improve my skills as a sales
+            associate I followed and analyzed visitors behaviour daily.
           </p>
         </section>
 
